# mml

./: .gitignore  CMakeLists.txt  README.md  conv.c  data.c  data.h  layers.c  layers.h  logic.c  main.c  matrix.c  matrix.h  mml  nn.c  nn.h  run.sh  test  test.c  test.h  visual.c  visual.h
layers/: common.c  common.h  conv2d.c  conv2d.h  dense.c  dense.h  flatten.c  flatten.h  maxpool.c  maxpool.h
